fix StageDisplay errors, EvalSummary

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -575,13 +575,13 @@ FOV=90
 ShowHeader=true
 HeaderX=SCREEN_CENTER_X
 HeaderY=SCREEN_TOP-2
-HeaderOnCommand=draworder,5;
+HeaderOnCommand=draworder,1;
 HeaderOffCommand=
 
 ShowFooter=true
 FooterX=SCREEN_CENTER_X
 FooterY=SCREEN_BOTTOM+2
-FooterOnCommand=draworder,5;vertalign,bottom;zoomtowidth,SCREEN_WIDTH+1;
+FooterOnCommand=draworder,1;vertalign,bottom;zoomtowidth,SCREEN_WIDTH+1;
 FooterOffCommand=
 
 ShowHelp=true
@@ -598,7 +598,7 @@ AlternateHelpDisplayOffCommand=linear,0.175;zoomy,0
 
 TimerX=SCREEN_RIGHT-36-4
 TimerY=SCREEN_TOP+24
-TimerOnCommand=draworder,6;visible,PREFSMAN:GetPreference("MenuTimer");
+TimerOnCommand=draworder,2;visible,PREFSMAN:GetPreference("MenuTimer");
 # TimerOnCommand=fov,90;vanishpoint,SCREEN_RIGHT-36-4,SCREEN_TOP+20;draworder,5;visible,PREFSMAN:GetPreference("MenuTimer");rotationy,90;decelerate,0.4;rotationy,0;
 TimerOffCommand=
 # TimerOffCommand=accelerate,0.4;rotationx,90;
@@ -699,6 +699,7 @@ NetworkStatusOffCommand=linear,0.5;cropright,1
 #
 
 [ScreenQuickSetupOverview]
+
 IconStartX=SCREEN_CENTER_X-160
 IconStartY=SCREEN_BOTTOM-60
 IconSetX=SCREEN_CENTER_X-160
@@ -911,7 +912,7 @@ SongTimeAutogenCommand=diffuse,Color("Green");
 SongTimeLongCommand=diffuse,Color("Yellow");diffusebottomedge,Color("Orange");
 SongTimeMarathonCommand=diffuse,Color("Orange");diffusebottomedge,Color("Red");
 #
-ShowSortOrderFrame=true
+ShowSortOrderFrame=false
 SortOrderFrameX=SCREEN_CENTER_X+128+32
 SortOrderFrameY=SCREEN_TOP+24
 SortOrderFrameOnCommand=draworder,105;shadowlength,1
@@ -920,17 +921,17 @@ SortOrderFrameSongChosenCommand=linear,0.1;diffusealpha,0;
 SortOrderFrameOffCommand=bouncebegin,0.05;zoomy,0;
 #
 ShowSortOrder=true
-SortOrderX=SCREEN_CENTER_X+128+32-48+4
-SortOrderY=SCREEN_TOP+24
-SortOrderOnCommand=draworder,105;horizalign,left;strokecolor,Color("Outline");zoom,0.675;maxwidth,114/0.675;
+SortOrderX=SCREEN_CENTER_X-160+128
+SortOrderY=SCREEN_TOP+160+(36/2)+8
+SortOrderOnCommand=draworder,105;horizalign,right;strokecolor,Color("Outline");zoom,0.675;maxwidth,96/0.675;
 SortOrderSortCommand=finishtweening;zoom,0.675*1.25;diffuse,Color("Yellow");diffusebottomedge,Color("Orange");decelerate,0.5;zoom,0.675;diffuse,Color("White");
 SortOrderSongChosenCommand=linear,0.25;diffusealpha,0;
 SortOrderOffCommand=bouncebegin,0.05;zoomy,0;
 #
 ShowStageDisplay=true
-StageDisplayX=SCREEN_LEFT+200+88
+StageDisplayX=SCREEN_RIGHT-128
 StageDisplayY=SCREEN_TOP+24+3
-StageDisplayOnCommand=skewx,-0.125;draworder,105;fov,90;zoom,0.675;zoomy,0;sleep,0.2;smooth,0.1;zoomy,0.675
+StageDisplayOnCommand=skewx,-0.125;draworder,105;fov,90;zoom,0.75
 StageDisplayOffCommand=linear,0.05;zoomy,0;
 #
 ShowDifficultyDisplay=not ThemePrefs.Get("AutoSetStyle") and not GAMESTATE:IsCourseMode()
@@ -958,7 +959,7 @@ BPMDisplayOffCommand=bouncebegin,0.05;zoomx,0;
 #
 ShowBPMLabel=true
 BPMLabelX=SCREEN_CENTER_X-160-90
-BPMLabelY=SCREEN_TOP+160+(36/2)+6
+BPMLabelY=SCREEN_TOP+160+(36/2)+8
 BPMLabelOnCommand=addx,-SCREEN_CENTER_X;decelerate,0.1;addx,SCREEN_CENTER_X
 BPMLabelOffCommand=bouncebegin,0.05;zoomx,0;
 #
@@ -972,6 +973,7 @@ ShowDifficultyList=not GAMESTATE:IsCourseMode();
 DifficultyListX=SCREEN_CENTER_X-160
 DifficultyListY=SCREEN_TOP+216
 DifficultyListOnCommand=addx,-SCREEN_CENTER_X;decelerate,0.1;addx,SCREEN_CENTER_X;
+DifficultyListStartSelectingStepsMessageCommand=finishtweening;glowshift;effectcolor1,color("1,1,1,0.25");effectcolor2,color("1,1,1,0");effectperiod,2;
 DifficultyListOffCommand=bouncebegin,0.05;zoomx,0;
 #
 DifficultyListTweenOnCommand=stoptweening;bounceend,0.1;zoomx,1
@@ -1045,7 +1047,7 @@ CDTitleY=SCREEN_TOP+160+(36/2)+8
 CDTitleFrontCommand=diffuse,color('0.5,0.5,0.5,1');cullmode,'CullMode_Front'
 CDTitleBackCommand=cullmode,'CullMode_Back'
 #CDTitleOnCommand=draworder,106;shadowlength,1;zoom,0.75;diffusealpha,1;zoom,0;bounceend,0.1;zoom,0.75;spin;effectmagnitude,0,180,0;
-CDTitleOnCommand=diffusealpha,0
+CDTitleOnCommand=visible,false
 CDTitleOffCommand=bouncebegin,0.05;zoomx,0;
 #
 ScoreP1SortChangeCommand=stoptweening;
