--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1843,6 +1843,7 @@ ChoiceOptions="screen,ScreenOptionsService;text,Options"
 ChoiceEdit="text,Edit/Share;screen,"..Branch.OptionsEdit()
 ChoiceExit="screen,ScreenExit;text,Exit"
 # Aliases for the future.
+ChoiceContinue="screen,ScreenContinue;text,Continue?"
 ChoiceOnline="screen,ScreenNetworkOptions;text,Play Online"
 ChoiceGameSelect="screen,ScreenSelectGame;text,Select Game"
 ChoiceJukebox="screen,ScreenJukeboxMenu;text,Jukebox"
@@ -3653,6 +3654,17 @@ CodeNextRow2="Select,~Select"
 CodeBackspace="@Select-MenuLeft"
 CodeJumpToEnter="@Select-Start"
 CodeEnter="Start"
+
+[ScreenContinue]
+Class="ScreenContinue"
+Fallback="ScreenWithMenuElements"
+NextScreen=Branch.AfterContinue()
+PrevScreen=Branch.AfterContinue()
+PrepareScreens=""
+HelpText="100"
+TimerSeconds=15
+ForceTimer=true
+ForceTimerWait=true
 
 [ScreenProfileSave]
 Class="ScreenProfileSave"
