--- a/Themes/home/metrics.ini
+++ b/Themes/home/metrics.ini
@@ -6,4 +6,7 @@ FallbackTheme=default
 [ScreenEdit]
 EditModifiers="midi-note"
 
+[ScreenTitleMenu]
+ChoiceNames="GameStart,Options,Continue,Edit,Jukebox,GameSelect,Exit"
+
 [MusicWheel]
