Implement ScreenCaution, fix CDTitle

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1837,7 +1837,7 @@ UpdateOnMessage=""
 NumChoicesOnPage1=100
 DefaultChoice="GameStart"
 ChoiceNames="GameStart,Options,Edit,Jukebox,GameSelect,Exit"
-ChoiceGameStart="applydefaultoptions;text,Game Start;screen,"..Branch.StartGame()
+ChoiceGameStart="applydefaultoptions;text,Game Start;screen,"..Branch.AfterTitleMenu()
 #ChoiceQuickPlay="applydefaultoptions;text,Quick Play;"
 ChoiceOptions="screen,ScreenOptionsService;text,Options"
 ChoiceEdit="text,Edit/Share;screen,"..Branch.OptionsEdit()
@@ -1891,6 +1891,14 @@ LogoX=SCREEN_CENTER_X
 LogoY=SCREEN_CENTER_Y-80
 LogoOnCommand=bob;effectperiod,4;effectmagnitude,0,8,0;zoom,0;bounceend,0.35;zoom,1
 LogoOffCommand=
+
+[ScreenCaution]
+Fallback="ScreenSplash"
+PrepareScreen=""
+NextScreen=Branch.StartGame()
+PrevScreen=Branch.TitleMenu()
+TimerSeconds=3
+AllowStartToSkip=true
 
 [ScreenProfileLoad]
 Class="ScreenProfileLoad"
@@ -2999,7 +3007,7 @@ Line19="conf,NumBackgrounds"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsService"
 PrevScreen="ScreenOptionsService"
-LineNames="1,3,4,6,7,9,10,11,12,14"
+LineNames="1,3,4,6,7,8,9,10,11,12,14"
 Line1="conf,Center1Player"
 Line3="conf,DancePointsForOni"
 Line4="conf,MenuTimer"
