Fix up HowToPlay graphics

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -523,7 +523,7 @@ Fallback="StepsDisplay"
 # end;
 PillTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 	local offset = itemIndex / numItems \
-	local rate = 4 \
+	local rate = 2 \
 	local fItemWidth = ( 256 / numItems ) \
 	self:x( ((itemIndex-(numItems/2))*fItemWidth) + ( numItems / 2 ) ); \
 	self:zoomtowidth(fItemWidth); \
@@ -589,8 +589,8 @@ HeaderOffCommand=
 
 ShowFooter=true
 FooterX=SCREEN_CENTER_X
-FooterY=SCREEN_BOTTOM+2
-FooterOnCommand=draworder,1;vertalign,bottom;zoomtowidth,SCREEN_WIDTH+1;
+FooterY=SCREEN_BOTTOM+4
+FooterOnCommand=draworder,1;
 FooterOffCommand=
 
 ShowHelp=true
@@ -915,6 +915,7 @@ ShowSongTime=true
 SongTimeX=SCREEN_CENTER_X-160
 SongTimeY=SCREEN_TOP+160+(36/2)+8
 SongTimeOnCommand=zoom,0.75;strokecolor,Color("Outline");shadowlength,1
+
 
 SongTimeOffCommand=bouncebegin,0.15;zoom,0;diffusealpha,0;
 SongTimeResetCommand=diffuse,Color("White");
