Make TwoPartSelection dialog work for all players

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -698,6 +698,7 @@ ShowVersionInfo=true
 VersionInfoX=SCREEN_RIGHT-16
 VersionInfoY=SCREEN_TOP+24
 VersionInfoOnCommand=
+
 VersionInfoOffCommand=
 #
 ShowNetworkStatus=true
@@ -984,7 +985,7 @@ ShowDifficultyList=not GAMESTATE:IsCourseMode();
 DifficultyListX=SCREEN_CENTER_X-160
 DifficultyListY=SCREEN_TOP+216
 DifficultyListOnCommand=addx,-SCREEN_CENTER_X;decelerate,0.1;addx,SCREEN_CENTER_X;
-DifficultyListStartSelectingStepsMessageCommand=finishtweening;glowshift;effectcolor1,color("1,1,1,0.25");effectcolor2,color("1,1,1,0");effectperiod,2;
+DifficultyListStartSelectingStepsMessageCommand=finishtweening;accelerate,0.2;zoom,1.1;decelerate,0.2;zoom,1;
 DifficultyListOffCommand=bouncebegin,0.05;zoomx,0;
 #
 DifficultyListTweenOnCommand=stoptweening;bounceend,0.1;zoomx,1
