ScoreDisplay has actual shadows now...

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -370,12 +370,14 @@ FrameOnCommand=visible,false;spin
 TimeRemainingY=80
 TimeRemainingOnCommand=zoom,1;shadowlength,1;
 #
-DeltaSecondsOnCommand=y,80;spin;
+DeltaSecondsOnCommand=y,80;
 DeltaSecondsGainLifeCommand=zoom,0.5;
 
 [ScoreDisplayPercentage Percent]
-PercentP1OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_1);strokecolor,ColorDarkTone(PlayerColor(PLAYER_1))
-PercentP2OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_2);strokecolor,ColorDarkTone(PlayerColor(PLAYER_2))
+PercentP1OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_1);strokecolor,Color.Outline
+PercentP2OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_2);strokecolor,Color.Outline
+DancePointsP1OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_1);strokecolor,Color.Outline
+DancePointsP2OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_2);strokecolor,Color.Outline
 
 [ScoreDisplayRave]
 MeterP1OnCommand=draworder,-1;texcoordvelocity,1,0
@@ -523,15 +525,15 @@ Fallback="StepsDisplay"
 # end;
 PillTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 	local offset = itemIndex / numItems \
-	local rate = 2 \
+	local rate = 4 \
 	local fItemWidth = ( 256 / numItems ) \
 	self:x( ((itemIndex-(numItems/2))*fItemWidth) + ( numItems / 2 ) ); \
 	self:zoomtowidth(fItemWidth); \
 	self:diffuseramp(); \
 	self:effectcolor2(color("1,1,1,1")); \
 	self:effectcolor1(color("0.5,0.5,0.5,1")); \
+	self:effectperiod(rate); \
 	self:effectclock('beat'); \
-	self:effecttiming(rate*0.75,rate*0.125,rate*0.125,0); \
 	self:effectoffset(1-offset); \
 end;
 # PillTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
@@ -698,6 +700,7 @@ ShowVersionInfo=true
 VersionInfoX=SCREEN_RIGHT-16
 VersionInfoY=SCREEN_TOP+24
 VersionInfoOnCommand=
+
 
 VersionInfoOffCommand=
 #
