TwoPartSelection noteskin for pump only, routine skins

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -374,10 +374,10 @@ DeltaSecondsOnCommand=y,80;
 DeltaSecondsGainLifeCommand=zoom,0.5;
 
 [ScoreDisplayPercentage Percent]
-PercentP1OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_1);strokecolor,Color.Outline
-PercentP2OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_2);strokecolor,Color.Outline
-DancePointsP1OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_1);strokecolor,Color.Outline
-DancePointsP2OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_2);strokecolor,Color.Outline
+PercentP1OnCommand=shadowlength,1;strokecolor,Color.Outline
+PercentP2OnCommand=shadowlength,1;strokecolor,Color.Outline
+DancePointsP1OnCommand=shadowlength,1;strokecolor,Color.Outline
+DancePointsP2OnCommand=shadowlength,1;strokecolor,Color.Outline
 
 [ScoreDisplayRave]
 MeterP1OnCommand=draworder,-1;texcoordvelocity,1,0
@@ -564,9 +564,10 @@ Fallback="TextBanner"
 
 [ScreenSystemLayer]
 ShowClock=true
-CreditsP1OnCommand=horizalign,left;vertalign,bottom;zoom,0.675;shadowlength,1;
+CreditsP1OnCommand=horizalign,left;vertalign,bottom;zoom,0.675;shadowlength,1;diffuse,PlayerColor(PLAYER_1);diffusetopedge,ColorLightTone(PlayerColor(PLAYER_1));
 #
-CreditsP2OnCommand=horizalign,right;vertalign,bottom;zoom,0.675;shadowlength,1;
+CreditsP2OnCommand=horizalign,right;vertalign,bottom;zoom,0.675;shadowlength,1;diffuse,PlayerColor(PLAYER_2);diffusetopedge,ColorLightTone(PlayerColor(PLAYER_2));
+#
 
 [ScreenConsoleOverlay]
 
