--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3759,11 +3759,11 @@ Fallback="ScreenOptionsSimpleService"
 NextScreen=Branch.TitleMenu()
 PrevScreen=Branch.TitleMenu()
 
-LineNames="1,2,3,4"
+LineNames="1,2,3"
 Line1="gamecommand;screen,ScreenEditMenu;name,Edit Songs/Steps"
 Line2="gamecommand;screen,ScreenPracticeMenu;name,Practice Songs/Steps"
 Line3="gamecommand;screen,ScreenEditCourseModsMenu;name,Edit Courses/Mods"
-Line4="gamecommand;screen,ScreenOptionsExportPackage;name,Export Packages"
+#Line4="gamecommand;screen,ScreenOptionsExportPackage;name,Export Packages"
 
 # broken:
 # Line4="gamecommand;screen,ScreenOptionsManageCourses;name,Edit Courses"
