Change ES/OMES to 2x, extend timer on ScreenCaution
Also, changed indent style in .editorconfig to spaces  for txt files, to
reduce diff noise.

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.txt]
+indent_style = space
+
 [*.md]
 trim_trailing_whitespace = false
 
