--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1,4 +1,4 @@
-# This probably is hard to understand from the way it was made in the first 
+# This probably is hard to understand from the way it was made in the first
 # place, so instead just pay attention to each group, which has tons of notes.
 
 # 01 # Global
@@ -68,7 +68,7 @@ PercentScoreDecimalPlaces=2
 # 02 #
 
 [LightsManager]
-# Mostly useless since it doesn't work, as well as that barely anyone has 
+# Mostly useless since it doesn't work, as well as that barely anyone has
 # lights to play around with.
 GameButtonsToShow=""
 # these metrics don't exist yet, but are planned:
@@ -83,9 +83,9 @@ NumFixedProfiles=1
 
 [SongManager]
 # SSC: Determine what the ES/OMES Modifiers are
-ExtraStagePlayerModifiers="default,1.5x,reverse"
+ExtraStagePlayerModifiers="default,2x,reverse"
 ExtraStageStageModifiers="failimmediatecontinue,norecover"
-OMESPlayerModifiers="default,1.5x,reverse"
+OMESPlayerModifiers="default,2x,reverse"
 OMESStageModifiers="failimmediate,suddendeath"
 
 # How many different colors you can have in the MusicWheel
@@ -175,10 +175,10 @@ UnlockNames=""
 # to use to store the unlock.
 # Unlock2Command=song,"ABC";code,"59183751";roulette
 
-# 03 # 
+# 03 #
 
 [ArrowEffects]
-# Complicated stuff you probably shouldn't ever mess with or else you'll 
+# Complicated stuff you probably shouldn't ever mess with or else you'll
 # destroy mods completely! It's unknown why these were made into metrics.
 FrameWidthEffectsPixelsPerSecond=400
 FrameWidthEffectsMinMultiplier=0.5
@@ -475,7 +475,7 @@ SortLevel4Color=color("1,1,0,1")
 SortLevel5Color=color("0,1,0,1")
 
 [CustomDifficulty]
-# Custom system that lets you rename certain classes of difficulties to 
+# Custom system that lets you rename certain classes of difficulties to
 # something else. Mostly for custom games and game emulation, PIU for example.
 
 #Names="PumpHard,PumpFreestyle,PumpNightmare"
@@ -858,7 +858,7 @@ RightY=12
 [MenuTimer]
 WarningStart=10
 WarningBeepStart=10
-# I don't like it 
+# I don't like it
 # -- Midiman
 # MaxStallSeconds=7.5
 MaxStallSeconds=0
@@ -1897,7 +1897,9 @@ Fallback="ScreenSplash"
 PrepareScreen=""
 NextScreen=Branch.StartGame()
 PrevScreen=Branch.TitleMenu()
-TimerSeconds=3
+TimerSeconds=10
+TimerStealth=true
+ForceTimer=true
 AllowStartToSkip=true
 
 [ScreenProfileLoad]
