Massively improved Config Key/Joy Mappings screen. Warning is dismissable now, and cursor does not start in a position that will change a setting. New special actions added:  ClearToDefault, ReloadFromDisk, SaveToDisk, SetListMode.  Exit is a special action. Player is prompted to save when exiting screen instead of saving after every action. Special actions fallback on Graphics/SMC action if they don't have their own. Moved SMC overlay to Graphics/SMC warning. Metrics for configuring input lock time, warning autodismiss time, lines visible, and NoSetListPrompt autodismiss time. Header row added for cursor to start on. ScreenMapControllers2 deleted as obsolete. BitmapText:maxwidth changed to factor the zoom of the actor into the calculation.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1339,6 +1339,7 @@ ItemsLongRowSharedX=SCREEN_CENTER_X
 [OptionRowMiniMenuContext]
 
 [ScreenMapControllers]
+LinesVisible=15
 
 [ScreenTestInput]
 
