--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2855,12 +2855,27 @@ Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsService"
 HelpText=Screen.String("HelpTextMapControllers")
 #
-ScreenOnCommand=%function(self) MESSAGEMAN:Broadcast("KeyConfigRequestStall"); self:lockinput(5); end;
+LockInputSecs=2.5
+AutoDismissWarningSecs=2.5
+LinesVisible=16
+AutoDismissNoSetListPromptSecs=5
 #
 DevicesX=SCREEN_CENTER_X
 DevicesY=SCREEN_TOP+24
 DevicesOnCommand=zoom,0.75;draworder,5;strokecolor,color("0,0,0,1")
 DevicesOffCommand=
+#
+HeaderP1S1Command=x,SCREEN_CENTER_X-270
+HeaderP1S2Command=x,SCREEN_CENTER_X-195
+HeaderP1S3Command=x,SCREEN_CENTER_X-120
+HeaderP2S1Command=x,SCREEN_CENTER_X+120
+HeaderP2S2Command=x,SCREEN_CENTER_X+195
+HeaderP2S3Command=x,SCREEN_CENTER_X+270
+#
+headerCenterOnCommand=x,SCREEN_CENTER_X;y,-6;zoom,0.7;shadowlength,1;ztest,true
+HeaderOnCommand=diffuse,color("#808080");shadowlength,0;zoom,0.75;maxwidth,130;
+HeaderGainFocusCommand=diffuse,color("#808080");diffuseshift;effectcolor2,color("#808080");effectcolor1,color("#FFFFFF")
+HeaderLoseFocusCommand=diffuse,color("#808080");stopeffect
 #
 ButtonsToMap=""
 MappedToP1S1Command=x,SCREEN_CENTER_X-270
@@ -2870,11 +2885,13 @@ MappedToP2S1Command=x,SCREEN_CENTER_X+120
 MappedToP2S2Command=x,SCREEN_CENTER_X+195
 MappedToP2S3Command=x,SCREEN_CENTER_X+270
 #
-MappedToOnCommand=diffuse,color("#808080");shadowlength,0;maxwidth,150;zoom,0.75
+MappedToOnCommand=diffuse,color("#808080");shadowlength,0;zoom,0.75;maxwidth,130
 MappedToWaitingCommand=diffuse,color("#FF8080");pulse;effectperiod,0.5;effectmagnitude,0.8,1.3,0
 MappedToMappedInputCommand=diffuse,color("#808080");diffuseshift;effectcolor2,color("#808080");effectcolor1,color("#FFFFFF")
 MappedToGainFocusCommand=diffuse,color("#808080");diffuseshift;effectcolor2,color("#808080");effectcolor1,color("#FFFFFF")
 MappedToLoseFocusCommand=diffuse,color("#808080");stopeffect
+MappedToGainMarkCommand=textglowmode,'TextGlowMode_Inner';glow,color("#FF00007f")
+MappedToLoseMarkCommand=textglowmode,'TextGlowMode_Inner';glow,color("#FF000000")
 #
 LineScrollerOnCommand=%function(self) self:draworder(-1); self:y(64) self:setsecondsperitem(0.1) self:SetTransformFromHeight(24) end
 LineScrollerOffCommand=
