Added max_dimension_use_zoom lua function to control whether an individual BitmapText uses the zoom in maxwidth calculations.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2886,7 +2886,7 @@ ListHeaderP2S3Command=x,SCREEN_CENTER_X+270
 # ListHeaderCenterOnCommand is for the center element of the ListHeader.
 ListHeaderCenterOnCommand=x,SCREEN_CENTER_X;y,-6;zoom,0.7;shadowlength,1;ztest,true
 # These commands are shared by all the ListHeader parts.
-ListHeaderOnCommand=diffuse,color("#808080");shadowlength,0;zoom,0.75;maxwidth,130;
+ListHeaderOnCommand=diffuse,color("#808080");shadowlength,0;max_dimension_use_zoom,true;zoom,0.75;maxwidth,130;
 ListHeaderGainFocusCommand=diffuse,color("#808080");diffuseshift;effectcolor2,color("#808080");effectcolor1,color("#FFFFFF")
 ListHeaderLoseFocusCommand=diffuse,color("#808080");stopeffect
 #
@@ -2902,7 +2902,7 @@ MappedToP2S1Command=x,SCREEN_CENTER_X+120
 MappedToP2S2Command=x,SCREEN_CENTER_X+195
 MappedToP2S3Command=x,SCREEN_CENTER_X+270
 # These commands are shared between all the elements.
-MappedToOnCommand=diffuse,color("#808080");shadowlength,0;zoom,0.75;maxwidth,130
+MappedToOnCommand=diffuse,color("#808080");shadowlength,0;zoom,0.75;max_dimension_use_zoom,true;maxwidth,130
 # WaitingCommand is executed when the player hits enter to set a key.
 MappedToWaitingCommand=diffuse,color("#FF8080");pulse;effectperiod,0.5;effectmagnitude,0.8,1.3,0
 # MappedInputCommand is executed after the player maps the key.
