Fixed GAMESTATE:GetCurrentStage to use correct logic for determining if all human players are on final stage. THEME:GetPath lua functions can now pass true for the third arg if the element is optional. Fixes to various StageDisplay things in default. thify_number and thified_curstage_index lua functions added to default/Scripts/04 Other.lua.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -2023,7 +2023,7 @@ SmallBanner4OffCommand=
 
 SmallBanner5X=SCREEN_CENTER_X+48
 SmallBanner5Y=SCREEN_TOP+100+16
-SmallBanner5OnCommand=zoom,0.5
+SmallBanner5OnCommand=visible,false
 SmallBanner5OfCommand=
 
 SmallBanner6X=SCREEN_CENTER_X+72
